<resources>
    <string name="app_name">GameDay</string>
    <string name="welcome_header_text">Hey there, Welcome Aboard</string>
    <string name="welcome_body_text">Find great deals on products you love and get to know great products that suits best for you.</string>
    <string name="create_an_account">Create an account</string>
    <string name="log_in">Log in</string>
    <string name="terms_conditions">By creating an account, you agree to our <b>Terms and Conditions</b> and agree to <b>Privacy policy.</b></string>
    <string name="login_page_welcome_header">Welcome back</string>
    <string name="login_page_welcome_body">Please login to continue</string>
    <string name="login_page_create_account_prompt">Don’t have an account? <b>Register</b></string>
    <string name="content_desc_back_button">Go back to previous screen</string>
    <string name="login_page_email_hint">Email</string>
    <string name="password">Password</string>
    <string name="content_desc_product_image">Product image</string>
    <string name="profile_option_my_orders">My Orders</string>
    <string name="profile_option_shipping_addresses">Shipping addresses</string>
    <string name="profile_option_payment_methods">Payment methods</string>
    <string name="profile_option_promo_codes">Promocodes</string>
    <string name="profile_option_my_reviews">My reviews</string>
    <string name="profile_option_settings">Settings</string>

</resources>